--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -1,8 +1,32 @@
 <% if !articolo.nil? %>
+  <div class="fs-postcontent fs-postcontent-0 clearfix">
+    <div class="fs-content-layout">
+      <div class="fs-content-layout-row">
+        <div class="fs-layout-cell layout-item-0" style="width: 100%">
+          <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+            <%= link_to h(truncate(articolo.titolo, :length => 200)), :controller => articolo.section.top_section.top_menu.key + '/sezione/'+ articolo.section.top_section_id.to_s, :action => 'articolo', :id => articolo.id %>
+          </h4>
+          <h2 style="disply:none">
+            <%= link_to (h(truncate(articolo.titolo, :length => 200)), params.merge(:controller => 'editorial', :topmenu_key => articolo.section.top_section.top_menu.key, :section_name => articolo.section.sezione, :article_title => truncate(articolo.titolo, :length => 100)), :escape => false) %>
+          </h2>
+          <span style="color:#ffffff;" class="fs-sections"><%= articolo.top_section %> :: <%= articolo.section %>
+          </span>
+          <br/>
+          <%# articolo.section.issues.count %>
+          <span class="fs-postauthoricon">  Autore:<%= h articolo.author %>
+          </span>
+          <br/>
+          <%= articolo.riassunto %>
+          <br/>
+          <%=h articolo.status %>
+          <%= link_to "Continua... ", {:controller => 'editorial', :action => 'articolo', :id => articolo.id} %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% else %>
   <div class="fs_box_opacity">
-    <%= link_to(h(articolo.id), :controller => 'editorial', :action => 'articolo', :id => articolo) %>
-    <%= link_to(h(articolo.id), :controller => 'editorial', :action => 'edizione', :id => articolo.project) %>
-    <%= h(truncate(articolo.subject, :length => 60)) %>
-    <%=h articolo.status %>
+    Articolo non trovato
   </div>
 <% end %>
+
