Solve menu and sub menu routes

--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -1,17 +1,9 @@
+<h1 style="display:none">__PARTIAL <%= @base_url %>/////<%= @article_id %> ARTICOLI</h1>
+
 <div class="fs-layout-cell fs-content clearfix">
-  <h2><%=l(:list_articoli)%></h2>
-  In questa pagina:
-  <ul> 
-    <li>Lista degli articoli</li>
-    <li>Filtraggio sul contenuto</li>
-    <li>LINK: all'edizione di ciascun articoli</li>
-    <li>LINK: alla sezione di ciascun articoli</li>
-  </ul> 
-  <br/>
-  <p class="pagination"><%= pagination_links(@issues_pages, :link_to_current_page => false, :url => home_path) %></p>
-  <br/>
-  <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count, :path_prefix => 'ddddddddd') %></p>
-  
+
+  <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count) %></p>
+
   <article class="fs-post fs-article">
     <% @issues.each do |articolo| %>
       <%= render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
@@ -21,11 +13,18 @@
   <br/>
   <p class="pagination"><%= pagination_links(@issues_pages, :link_to_current_page => false, :url => home_path) %></p>
   <br/>
-  <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count, :path_prefix => 'ddddddddd') %></p>
   <div class="clearfix"></div>
-</div>  
-
-
-
-
-
+</div>
+<!--
+pagination_links_full(@issues_pages, @issues_count, {:path_prefix => 'ddddddddd', :use_route => :sezione_page}) %></p>
+  <h2><%=l(:list_articoli)%></h2>
+  In questa pagina:
+  <ul>
+    <li>Lista degli articoli</li>
+    <li>Filtraggio sul contenuto</li>
+    <li>LINK: all'edizione di ciascun articoli</li>
+    <li>LINK: alla sezione di ciascun articoli</li>
+  </ul>
+  <br/>
+  <br/>
+-->
