--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -1,19 +1,21 @@
+<h1 style="display:none">__PARTIAL ARTICOLO TEASER</h1>
 <% if !articolo.nil? %>
   <div class="fs-postcontent fs-postcontent-0 clearfix">
     <div class="fs-content-layout">
       <div class="fs-content-layout-row">
         <div class="fs-layout-cell layout-item-0" style="width: 100%">
           <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-            <%= link_to h(truncate(articolo.titolo, :length => 200)), :controller => articolo.section.top_section.top_menu.key + '/sezione/'+ articolo.section.top_section_id.to_s, :action => 'articolo', :id => articolo.id %>
+            <%= link_to (h(truncate(articolo.titolo, :length => 50)),
+url_for(:controller => 'editorial', :action=>"articolo", :top_menu_key => articolo.section.top_section.top_menu.key, :article_id => articolo.id.to_s, :escape => false))
+            %>
           </h4>
-          <h2 style="disply:none">
-            <%= link_to (h(truncate(articolo.titolo, :length => 200)), params.merge(:controller => 'editorial', :topmenu_key => articolo.section.top_section.top_menu.key, :section_name => articolo.section.sezione, :article_title => truncate(articolo.titolo, :length => 100)), :escape => false) %>
-          </h2>
-          <span style="color:#ffffff;" class="fs-sections"><%= articolo.top_section %> :: <%= articolo.section %>
+          <span style="color:#ffffff;" class="fs-sections">
+            <%= articolo.top_section %> :: <%= articolo.section %>
           </span>
           <br/>
           <%# articolo.section.issues.count %>
-          <span class="fs-postauthoricon">  Autore:<%= h articolo.author %>
+          <span class="fs-postauthoricon">
+            Autore:<%= h articolo.author %>
           </span>
           <br/>
           <%= articolo.riassunto %>
@@ -29,4 +31,3 @@
     Articolo non trovato
   </div>
 <% end %>
-
