--- a/app/views/editorial/home.html.erb
+++ b/app/views/editorial/home.html.erb
@@ -1,7 +1,6 @@
-<h1>HOME<%= @base_url %>HOME</h1>
+<h1 style="display:none">HOME<%= @base_url %>HOME</h1>
 <%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
 <%#sidebar a centro destra %>
 <%= render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
 <%= render :partial => 'blocco_sidebar2' %>
-
