--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -3,9 +3,11 @@
 <div class="fs-layout-cell fs-content clearfix">
 
   <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count) %></p>
-
+  <h5 style="background-color: yellow;">Debug:  questo è il controller e la vista :top_menu, render parziali:articoli +articolo_teaser . <br /> Questo è menu numero <%=@top_menu.id  %> , esso contiene <%=@topsection_ids.count  %> sezioni e  <%=@issues_count  %> articoli. </h5>
   <article class="fs-post fs-article">
     <% @issues.each do |articolo| %>
+
+
       <%= render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
       <br/>
     <% end %>
