--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,11 +1,12 @@
 <h1 style="display:none">__PARTIAL <%= @articolo %> FULL</h1>
-<h2><%= @articolo.titolo %><h2>
-<br />
+<h2><%= @articolo.titolo %>
+</h2>
+<br/>
 <span style="color:#ffffff;" class="fs-sections">
   <%= @articolo.top_section %> --> <%= @articolo.section %>
 
   <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-    <%=link_to h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action=>"topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_id => @articolo.section.top_section.id, :escape => false)
+    <%= link_to h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action => "topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_id => @articolo.section.top_section.id, :escape => false)
     %>
   </h4>
 
@@ -16,10 +17,12 @@
   Autore:<%= h @articolo.author %>
 </span>
 <br/>
+
 <div class="subject">
   <%= @articolo.subject %>
 </div>
 <br/>
+
 <div class="articolo">
   <%= @articolo.description %>
 </div>
