--- a/app/views/editorial/top_sezione.html.erb
+++ b/app/views/editorial/top_sezione.html.erb
@@ -1,6 +1,5 @@
-
-<h1 style="display:none">TOP_SEZIONE<%= @base_url %>TOPMENU</h1>
- <%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
+<h1 style="display:none">TOP_SEZIONE<%= @base_url %>TOP_sezione</h1>
+<%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
 <%#sidebar a centro destra %>
 <%= render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
