menu versione full friendly links

--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -11,16 +11,7 @@
   <br/>
    <div class="clearfix"></div>
 </div>
-<!--
-pagination_links_full(@issues_pages, @issues_count, {:path_prefix => 'ddddddddd', :use_route => :sezione_page}) %></p>
-  <h2><%= l(:list_articoli) %></h2>
-  In questa pagina:
-  <ul>
-    <li>Lista degli articoli</li>
-    <li>Filtraggio sul contenuto</li>
-    <li>LINK: all'edizione di ciascun articoli</li>
-    <li>LINK: alla sezione di ciascun articoli</li>
-  </ul>
-  <br/>
-  <br/>
--->
+<%#sidebar a centro destra %>
+<%= render :partial => 'blocco_sidebar1' %>
+<%#sidebar a destra %>
+<%= render :partial => 'blocco_sidebar2' %>
