--- a/app/views/editorial/_viste_non_utilizzate/sezione.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/sezione.html.erb
@@ -3,4 +3,4 @@
 <%#sidebar a centro destra %>
 <%# render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
-<%= render :partial => 'blocco_sidebar2' %>
+<%# render :partial => 'blocco_sidebar2' %>
