--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,28 +1,15 @@
-<h1 style="display:none">__PARTIAL <%= @articolo %> FULL</h1>
-<h2><%= @articolo.titolo %>
-</h2>
+<h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+  <%= @articolo.titolo %>
+</h4>
+ <span style="color:#ffffff;" class="fs-sections">
+  <%= link_to h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action => "topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_key => @articolo.section.top_section.key, :escape => false) %>
+  <%= @articolo.section.sezione %>
+  </span>
 <br/>
-<span style="color:#ffffff;" class="fs-sections">
-  <%= @articolo.top_section %> --> <%= @articolo.section %>
-
-  <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-    <%= link_to h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action => "topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_id => @articolo.section.top_section.id, :escape => false)
-    %>
-  </h4>
-
-</span>
+<span class="fs-postauthoricon">  Autore:<%= h @articolo.author %>
+  </span>
 <br/>
-<%# @articolo.section.issues.count %>
-<span class="fs-postauthoricon">
-  Autore:<%= h @articolo.author %>
-</span>
-<br/>
-
-<div class="subject">
-  <%= @articolo.subject %>
+<div class="fs-layout-cell layout-item-1">
+  <%= @articolo.testo %>
 </div>
-<br/>
-
-<div class="articolo">
-  <%= @articolo.description %>
-</div>
+<%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key %>
