--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -6,7 +6,7 @@
           <div class="fs-layout-cell layout-item-0" style="width: 100%">
             <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
               <%= link_to (h(truncate(articolo.titolo, :length => 50)),
-                           url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :escape => false))
+                           url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s,:article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false))
               %>
             </h4>
             <span style="color:#ffffff;" class="fs-sections">
@@ -20,8 +20,7 @@
             <br/>
             <%= articolo.riassunto %>
             <br/>
-            <%= h articolo.status %>
-            <%= link_to "Continua... ", {:controller => 'editorial', :action => 'articolo', :id => articolo.id} %>
+            <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false)%>
           </div>
         </div>
       </div>
