--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,4 +1,5 @@
 <%= render :partial => 'blocco_sidebar2' %>
+<!-- blocco a sinistra     -->
 <div class="fs-layout-cell fs-content clearfix">
   <article class="fs-post fs-article">
     <div class="fs-postcontent fs-postcontent-0 clearfix">
@@ -6,8 +7,6 @@
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 100%">
             <%= render :partial => 'articolo_full', :locals => {:articolo => @articolo} %>
-
-            <%# link_to "Ritorna ...", @issue.section.top_section.top_menu.key + '/'+ @issue.section.top_section.key %>
           </div>
         </div>
       </div>
@@ -18,7 +17,7 @@
 
   <div class="clearfix"></div>
 </div>
-<%#sidebar a centro destra %>
+
 <%= render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
-<%# render :partial => 'blocco_sidebar2' %>
+
