--- a/app/views/editorial/_viste_non_utilizzate/toposezione.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/toposezione.html.erb
@@ -1,4 +1,4 @@
-<h1>SEZIONE<%= @topsection.name %>SEZIONE</h1>
+<h1 style="display:none">SEZIONE<%= @topsection.name %>SEZIONE</h1>
 <%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
 <%#sidebar a centro destra %>
 <%# render :partial => 'blocco_sidebar1' %>
