--- a/app/views/editorial/_blocco_sidebar1.erb
+++ b/app/views/editorial/_blocco_sidebar1.erb
@@ -1,71 +1,8 @@
-<!--
-<script type="text/javascript">
-    jQuery(document).ready(function () {
-        jQuery('#mycarousel').jcarousel({
-            animation:1000,
-            easing:'linear',
-            vertical:true,
-            scroll:1,
-            auto:5, //autoscroll every 5 secs
-            wrap:'circular' //scroll images circularly
-        });
-    });
-</script>
--->
-<div class="fs-layout-cell fs-sidebar1 clearfix">
-  <div class="fs-block clearfix">
-    <div class="fs-blockheader">
-      <h3 class="t">Blocco banners</h3>
-    </div>
-
+<div class="fs-layout-cell fs-sidebar1">
+  <div class="fs-layout-cell fs-sidebar1 clearfix">
 
       <%= render :partial => 'blocco_banners1' %>
 
-      <!--
-
-      <p>contenuti...</p>
-      <br>
-      <h4> posto per pubblicità e banners </h4>
-      <!--
-      <div id="jcarousel-wrapper">
-        <ul id="mycarousel" class="jcarousel-skin-simple">
-          <li><img src="/images/banners/1.jpg" alt=""></li>
-          <li><img src="/images/banners/2.jpg" alt=""></li>
-          <li><img src="/images/banners/3.jpg" alt=""></li>
-          <li><img src="/images/banners/4.jpg" alt=""></li>
-          <li><img src="/images/banners/5.jpg" alt=""></li>
-          <li><img src="/images/banners/6.jpg" alt=""></li>
-          <li><img src="/images/banners/7.jpg" alt=""></li>
-
-        </ul>
-
-      </div>
-      -->
-
-      &nbsp; <br/>
-      &nbsp; <br/>&nbsp; <br/>
-
-      <% if @issues && @issues.any? %>
-          <h3><%#l(:label_issues_by_section)%></h3>
-
-          <h3>Qui una lista degli articoli in evidenza della sezione top?</h3>
-
-          <div class="issues box">
-            Totale articoli: <b><%= @issues.count %></b>
-            <br/>
-            <% for articolo in @issues %>
-                <%= render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
-            <% end %>
-            <br/>
-            <%= link_to l(:label_issues_view_all), :action => 'articoli' %>
-          </div>
-      <% else %>
-          <p class="nodata"><%= l(:label_no_data) %></p>
-      <% end %>
-
-
-  </div>
-
 </div>
-
+</div>
 
