--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -1,6 +1,6 @@
 <h1 style="display:none">__PARTIAL <%= @base_url %>/////<%= @article_id %> ARTICOLI</h1>
 <div class="fs-layout-cell fs-content clearfix">
-  <nav class="fs-nav2 clearfix">
+  <nav class="art-nav clearfix">
        <%= render_navigation(:level => 2) %>
      </nav>
   <article class="fs-post fs-article">
@@ -12,9 +12,8 @@
   <br/>
   <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count) %></p>
   <br/>
-   <div class="clearfix"></div>
 </div>
-<%#sidebar a centro destra %>
+<%#sidebar a  destra %>
 <%= render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
-<%= render :partial => 'blocco_sidebar2' %>
+<%# render :partial => 'blocco_sidebar2' %>
