--- a/app/views/editorial/_blocco_banners1.erb
+++ b/app/views/editorial/_blocco_banners1.erb
@@ -1,6 +1,6 @@
 <div class="fs-block clearfix">
   <div class="fs-blockheader">
-    <h3 class="t">Blocco banners</h3>
+    <h3 class="t">I Nostri Consociati</h3>
   </div>
   <div class="fs-blockcontent">
     <div id="newsticker-wrap">
@@ -82,5 +82,3 @@
     </div>
   </div>
 </div>
-
-<div class="cleared"></div>
