--- a/app/views/editorial/_blocco_sidebar1.erb
+++ b/app/views/editorial/_blocco_sidebar1.erb
@@ -1,8 +1,8 @@
-<div class="fs-layout-cell fs-sidebar1">
-  <div class="fs-layout-cell fs-sidebar1 clearfix">
-
-      <%= render :partial => 'blocco_banners1' %>
-
-</div>
+<div class="fs-layout-cell fs-sidebar1 clearfix">
+  <div class="fs-block clearfix">
+    <%= render :partial => 'blocco_banners1' %>
+    <%= render :partial => 'blocco_account' %>
+    <%= render :partial => 'blocco_art_evidenziati' %>
+  </div>
 </div>
 
