--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => 'flash' %>
 <div class="fs-content-layout">
   <div class="fs-content-layout-row">
     <div class="fs-layout-cell layout-item-0" style="width: 100%">
@@ -9,7 +10,7 @@
 
         <%= call_hook :view_account_login_top %>
         <div id="login-form">
-          <% form_tag({:action => "login"}) do %>
+          <% form_tag({:controller => "account", :action => "login"}) do %>
               <%= back_url_hidden_field_tag %>
 
               <table>
@@ -46,7 +47,7 @@
                   </td>
                 </tr>
               </table>
-              <%= javascript_tag "Form.Element.focus('username');" %>
+              <%= javascript_tag "$('#username').focus();" %>
           <% end %>
         </div>
         <%= call_hook :view_account_login_bottom %>
