--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -74,6 +74,16 @@
 <body>
 <%= render :partial => 'flash' %>
 <div id="fs-main">
+
+  <div id="contenitore-top">
+    <div id="fs-top-menu">
+      <%# page_header_title %>
+      <div id="account">
+        <%= render_menu :top_menu_fs %>
+      </div>
+    </div>
+  </div>
+
   <div class="fs-sheet clearfix">
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
