migliorie al secondo menu e slide pubblicitaria

--- a/app/views/editorial/_blocco_ricerca.erb
+++ b/app/views/editorial/_blocco_ricerca.erb
@@ -1,6 +1,6 @@
 <div class="fs-block clearfix">
   <div class="fs-blockheader">
-    <h3 class="t">Ricerca</h3>
+    <div class="t">Ricerca</div>
   </div>
   <div class="fs-blockcontent">
     <div>
