--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -1,3 +1,4 @@
+ <!DOCTYPE html>
 <html dir="ltr" lang="en-EN">
 <head><!-- Created by DomThu & SPecchiaSoft -->
   <meta charset="utf-8">
@@ -9,10 +10,10 @@
   <%= csrf_meta_tag %>
   <%= favicon %>
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <!-- // [if lt IE 9]><%= javascript_include_tag 'html5.js' %><![endif]-->
+  <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <!--[if lte IE 7]><%= stylesheet_link_tag 'fe-blu-02/style.ie7.css', :media => 'screen' %><![endif]-->
-<%# css %>
+
   <style>
 
       .ie7 .post .layout-cell {
@@ -48,11 +49,14 @@
      <%= stylesheet_link_tag 'fe-blu-02/style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'fe-blu-02/style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'fe-blu-02/style-menu2.css', :media => 'all' %>
+  <%= stylesheet_link_tag 'fe-blu-02/style-slide.css', :media => 'all' %>
+
 
   <!-- jquery comuni -->
-  <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
-  <%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
+  <%#javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
+  <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
   <!-- jquery per il FE -->
+  <%= javascript_include_tag "fe-blu-02/jquery.js" %>
   <%= javascript_include_tag 'fe-blu-02/script.js' %>
   <%= javascript_include_tag 'fe-blu-02/script.responsive.js' %>
   <!-- jquery per la rotaziuone banner-->
@@ -70,14 +74,36 @@
       });
   </script>
 </head>
+<script>jQuery(function($) {
+    'use strict';
+    if ($.fn.slider) {
+        $(".fs-slidecontainershutterstock_6228764804").each(function () {
+            var slideContainer = $(this), tmp;
+            var inner = $(".fs-slider-inner", slideContainer);
+            var helper = null;
 
+
+            inner.children().eq(0).addClass("active");
+            slideContainer.slider({
+                pause: 2600,
+                speed: 600,
+                repeat: true,
+                animation: "fade",
+                direction: "next",
+                navigator: slideContainer.siblings(".fs-slidenavigatorshutterstock_6228764804"),
+                helper: helper
+                            });
+        });
+    }
+});
+</script>
 <body>
 <div id="fs-main">
   <div class="fs-sheet clearfix">
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
     </nav>
-    <header class="fs-header clearfix">
+    <header class="fs-header">
       <div class="fs-shapes">
         <h1 class="fs-headline">
           <a href="#">Professionisti in Materie Fiscali Sportive</a>
@@ -95,15 +121,15 @@
     <%# render :partial => 'footer' %>
   </div>
 
-</div> <%#fs-main%>
+</div>  <!--<%#fs-main%>
 <div id="ajax-indicator" style="display:none;"><span><%= l(:label_loading) %></span></div>
 <div id="header">
   <div id="main-menu" class="fs_box_opacity">
-    <%= render_menu :application_menu_fs %>
+    <%# render_menu :application_menu_fs %>
     <br/>
     <%# render_menu :footer_menu_fs %>
   </div>
 </div>
-
+ -->
 </body>
 </html>
