stilizzato l'articolo 2colonne, messe alcune immagini per gli articoli

--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -1,17 +1,76 @@
 <h1 style="display:none">__PARTIAL ARTICOLO TEASER</h1>
+<article class="fs-post fs-article">
+  <div class="fs-postmetadataheader">
+    <h5 class="fs-postheader">
+      <%= link_to (h(truncate(articolo.titolo, :length => 75)),
+                   url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+      %>
+    </h5>
+
+
+  </div>
+  <div class="fs-postcontent fs-postcontent-0 clearfix">
+    <div class="fs-content-layout-wrapper layout-item-0">
+      <div class="fs-content-layout">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell layout-item-1" style="width: 35%;">
+
+            <div class="image-caption-wrapper" style="float:left;">
+              <%= if articolo.immagine_url.nil?
+                    '<h3>no image</h3>'
+                  else
+                    image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 12)), :style => "width:200px", :class => "fs-lightbox")
+                  end
+              %>
+            </div>
+
+
+          </div>
+
+        <div class="fs-layout-cell layout-item-1" style="float:left;">
+          <%= articolo.riassunto %>
+          <br/>
+          <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
+        </div>
+          <div class="fs-postheadericons fs-metadata-icons">
+                  <span class="fs-postdateicon"><%= articolo.due_date %> </span>  &nbsp;
+                  <span class="fs-postauthoricon"><%= h articolo.author %></span>  &nbsp;
+                  <span class="fs-postcategoryicon"><%= articolo.top_section %> :: <%= articolo.section %></span> &nbsp;
+                  <span class="fs-postcommentsicon"><a href="#" title="Comments">Commenta »</a></span>    &nbsp;
+
+                </div>
+      </div>
+      </div>
+    </div>
+  </div>
+
+
+</article>
+
+<!--
+
+
 
     <div class="fs-postcontent fs-postcontent-0 clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 100%">
             <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-              <%= link_to (h(truncate(articolo.titolo, :length => 50)),
-                           url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s,:article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false))
-              %>
+              <%= link_to (h(truncate(articolo.titolo, :length => 100)),
+                           url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+%>
             </h4>
+
             <span style="color:#ffffff;" class="fs-sections">
+
             <%= articolo.top_section %> :: <%= articolo.section %>
           </span>
+           <%= if articolo.immagine_url.nil?
+                                                                                     puts "no image"
+               else
+                 image_tag(articolo.immagine_url, :alt => "bla", :style => "width:125px")
+               end
+%>
             <br/>
             <%# articolo.section.issues.count %>
             <span class="fs-postauthoricon">
@@ -20,8 +79,9 @@
             <br/>
             <%= articolo.riassunto %>
             <br/>
-            <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false)%>
+            <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
           </div>
         </div>
       </div>
     </div>
+-->
