--- a/public/stylesheets/fe-blu-02/style.css
+++ b/public/stylesheets/fe-blu-02/style.css
@@ -1597,11 +1597,13 @@ label.fs-radiobutton.hovered:before
 
 .fs-post
 {
-   border-left:1px dotted #7C9CC0;
+ /*  border-left:1px dotted #7C9CC0;
     border-right:1px dotted #7C9CC0;
 
    margin:0;
-  padding: 16px;
+  padding: 16px;*/
+    border:3px solid rgba(199, 199, 199, 0.34);
+    padding:7px;
 }
 a img
 {
@@ -1757,8 +1759,8 @@ pre
 
 .fs-postmetadataheader
 {
-   background: #718BEA;
-   background: rgba(113, 139, 234, 0.6);
+ /*  background: #718BEA;
+   background: rgba(113, 139, 234, 0.6);   */
    margin:0 auto;
    position:relative;
    z-index:1;
