--- a/app/views/editorial/_blocco_slide1.erb
+++ b/app/views/editorial/_blocco_slide1.erb
@@ -4,16 +4,22 @@
     <div id="shutterstock_6228764804" style="position: relative; display: inline-block; z-index: 0; margin: 7px;  border-width: 0px;  float: left;" class="fs-collage">
       <div class="fs-slider fs-slidecontainershutterstock_6228764804">
         <div class="fs-slider-inner">
-          <div class="fs-slide-item fs-slideshutterstock_62287648040">
+          <div class="fs-slide-item fs-slideshutterstock_01">
 
           </div>
-          <div class="fs-slide-item fs-slideshutterstock_62287648041">
+          <div class="fs-slide-item fs-slideshutterstock_02">
 
           </div>
-          <div class="fs-slide-item fs-slideshutterstock_62287648042">
+          <div class="fs-slide-item fs-slideshutterstock_03">
 
           </div>
-          <div class="fs-slide-item fs-slideshutterstock_62287648043">
+          <div class="fs-slide-item fs-slideshutterstock_04">
+
+          </div>
+		            <div class="fs-slide-item fs-slideshutterstock_05">
+
+          </div>
+		            <div class="fs-slide-item fs-slideshutterstock_06">
 
           </div>
 
