--- a/public/stylesheets/fe-blu-02/style-menu2.css
+++ b/public/stylesheets/fe-blu-02/style-menu2.css
@@ -1,7 +1,7 @@
 #home3 {
     background-image: url('/images/menu2/home3-32.png');
     background-repeat: no-repeat;
-    background-color: #ffed6b;
+    background-color: #EAF4F5;
     background-clip:content-box;
     -webkit-background-clip:content-box; /* Safari */
     background-position: 2px 1px;
@@ -10,7 +10,7 @@
 #home9 {
     background-image: url('/images/menu2/home9-32.png');
     background-repeat: no-repeat;
-    background-color:#ffed6b;
+    background-color: #EAF4F5;
     background-clip:content-box;
     -webkit-background-clip:content-box; /* Safari */
     background-position: 2px 1px;
@@ -19,7 +19,7 @@
 #home19 {
     background-image: url('/images/menu2/home19-32.png');
     background-repeat: no-repeat;
-    background-color: #ffed6b;
+    background-color: #EAF4F5;
     background-clip:content-box;
     -webkit-background-clip:content-box; /* Safari */
     background-position: 2px 1px;
@@ -160,7 +160,7 @@ ul.art-hmenu>li>a {
     border-bottom: 3px solid #45535d;
     border-top: 1px solid #cdd4ec;
     border-right: 2px solid #45535d;
-    border-left: 2px solid #cdd4ec;
+    border-left: 1px solid #cdd4ec;
 }
 
 .art-hmenu a,
@@ -198,7 +198,7 @@ ul.art-hmenu>li>a.active {
     border-bottom: 3px solid #fcc510;
     border-top: 1px solid #f4f0a7;
     border-right: 2px solid #fcc510;
-     border-left: 2px solid #f4f0a7;
+     border-left: 1px solid #f4f0a7;
 }
 
 ul.art-hmenu>li>a:visited,
