--- a/public/stylesheets/fe-blu-02/style-slide.css
+++ b/public/stylesheets/fe-blu-02/style-slide.css
@@ -55,26 +55,38 @@ margin:-6px auto 0;
 }
 
 
-.fs-slideshutterstock_62287648040 {
-    background-image:  url('/images/fe-blu-02/slideshutterstock_62287648040.jpg');
+.fs-slideshutterstock_01 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_1.jpg');
     background-position:  0 0;
     background-repeat: no-repeat;
 }
-.fs-slideshutterstock_62287648041 {
-    background-image:  url('/images/fe-blu-02/slideshutterstock_62287648041.jpg');
+.fs-slideshutterstock_02 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_2.jpg');
     background-position:  0 0;
     background-repeat: no-repeat;
 }
-.fs-slideshutterstock_62287648042 {
-    background-image:  url('/images/fe-blu-02/slideshutterstock_62287648042.jpg');
+.fs-slideshutterstock_03 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_3.jpg');
     background-position:  0 0;
     background-repeat: no-repeat;
 }
-.fs-slideshutterstock_62287648043 {
-    background-image:  url('/images/fe-blu-02/slideshutterstock_62287648043.jpg');
+.fs-slideshutterstock_04 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_4.jpg');
     background-position:  0 0;
     background-repeat: no-repeat;
 }
+.fs-slideshutterstock_05 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_5.jpg');
+    background-position:  0 0;
+    background-repeat: no-repeat;
+}
+
+.fs-slideshutterstock_06 {
+    background-image:  url('/images/fe-blu-02/slides/slideshutterstock_6.jpg');
+    background-position:  0 0;
+    background-repeat: no-repeat;
+}
+
 
 
 .fs-slidenavigatorshutterstock_6228764804 {
